Java backend, CI jobs and the first Java target java/gson (3 bugs, gson/1-3)
tools/zoo gains a Java backend: the patch adds a self-contained Maven module
hegel/ at the repository root (a pom depending on the library's own artifact,
installed into ~/.m2 by [run] setup, on dev.hegel:hegel 0.6.0 and JUnit 5)
whose JUnit platform listener prints one `ZOO ok|FAILED|ignored <method>`
line per test, the lines the judge reads; <hegel.version> in that pom is the
pinned dependency `zoo check` verifies. check.yml and full.yml get java jobs
(Temurin 25), HACKING.md the Java paragraph, zoo.toml the 0.6.0 pin.

java/gson (google/gson 2.14.1-SNAPSHOT, 8fe07781): a reference RFC 8259
reader/writer on plain values plus models of the documented formatting,
path, equality and coercion rules, eight properties. Bugs: nextInt/nextLong
accept non-exact values through their double fallback (2^63 reads as
Long.MAX_VALUE, 123456789012345678.0 as 123456789012345680); parseString
ignores trailing data after a top-level null; toJsonTree with an explicit
strictness throws for a finite BigDecimal beyond the double range that
toJson writes.

Co-Authored-By: Claude Fable 5.1 <noreply@anthropic.com>